test-data/unit/check-deleted-variable.test
-- Test cases for check_simple_assignment in checker.py 


-- 
-- --------------------------

    
[case testAssignmentToListFromDeleted]
def f() -> None:
    x = 1
    del x
    y = [x]  # E:

[case testTypedAssignmentFromDeleted]
def f() -> None:
    x = 1
    del x
    y: int = x # E:
[case testRedundantDeletion]
def f() -> None:
    x = 1
    del x
    del x
[case testSequentialAssignmentFromDeleted]
def f() -> None:
    x = 1
    del x
    y: int = x # E: 
    y = x